hotmoka/io-takamaka-examples/src/main/java/io/takamaka/tests/errors/legalstaticinitialization2/C.java
package io.takamaka.tests.errors.legalstaticinitialization2;

public class C {
	public final static String s = "hello"; // legal with final
}